examples/block-controller-internet.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-controller-internet
  namespace: kubex
spec:
  podSelector:
    matchLabels:
      control-plane: controller-manager
  policyTypes:
    - Egress
  egress:
    # Allow DNS.
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    # Allow access to kube-system (Kubernetes API, etc.).
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 192.168.0.0/16
      ports:
        - protocol: TCP
          port: 1
          endPort: 442
        - protocol: TCP
          port: 444
          endPort: 65535
        - protocol: UDP
          port: 1
          endPort: 65535
        - protocol: SCTP
          port: 1
          endPort: 65535
